--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-interpolation></app-interpolation> -->
-<app-componet></app-componet>
+<!-- <app-componet></app-componet> -->
+<app-logincomponent></app-logincomponent>
