--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,8 +1,24 @@
 <h1 class="event">Important Event</h1>
 
-<h5>Below Example Calling method if press the button  (Click Event)</h5>
+<h5>Below Example Calling method if press the button (Click Event)</h5>
 <button (click)="clickEvent('Hello Aamir')">Click</button>
-<h5>output is = {{inputValue}}</h5>
+<h5>output of click event = {{inputValue}}</h5>
 
 <h5>Key up event</h5><br><br>
-<input type="text" >
+<input type="text" #keyup (keyup)="keyupEvent(keyup.value)">
+<h5>output of key up Event = {{keyupValue}}</h5>
+
+
+<input type="text" (keyup.enter)="keyEnterEvent($event)">
+<h5> output of keyup Enter event = {{keyupEnter}}</h5>
+
+
+<input type="text" #keydown (keydown)="keydownEvent(keydown.value)" >
+<h5>output of key down Event = {{keydownValue}}</h5>
+
+<h5>Events are :</h5>
+<ul>
+    <li>(blur)</li>
+    <li>(mouseover)</li>
+    <li>(mouseleave)</li>
+</ul>
