--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- <app-interpolation></app-interpolation> -->
 <!-- <app-componet></app-componet> -->
 <!-- <app-logincomponent></app-logincomponent> -->
-<app-event></app-event>
+<!-- <app-event></app-event> -->
+<app-propbinding></app-propbinding>
