if, if-else condition

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
 <!-- <app-componet></app-componet> -->
 <!-- <app-logincomponent></app-logincomponent> -->
 <!-- <app-event></app-event> -->
-<app-propbinding></app-propbinding>
+<!-- <app-propbinding></app-propbinding> -->
+<app-condition></app-condition>
