--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,5 @@
 <!-- <app-logincomponent></app-logincomponent> -->
 <!-- <app-event></app-event> -->
 <!-- <app-propbinding></app-propbinding> -->
-<app-condition></app-condition>
+<!-- <app-condition></app-condition> -->
+<app-form></app-form>
