header and footer:

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,8 @@
 <!-- <app-event></app-event> -->
 <!-- <app-propbinding></app-propbinding> -->
 <!-- <app-condition></app-condition> -->
-<app-form></app-form>
+<div style="text-align: center  ;">
+    <app-header></app-header>
+    <h1>Header and Footer</h1>
+    <app-footer></app-footer>
+</div>
