--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,8 +4,9 @@
 <!-- <app-event></app-event> -->
 <!-- <app-propbinding></app-propbinding> -->
 <!-- <app-condition></app-condition> -->
-<div style="text-align: center  ;">
+<!-- <div style="text-align: center  ;">
     <app-header></app-header>
     <h1>Header and Footer</h1>
     <app-footer></app-footer>
-</div>
+</div> -->
+<app-stylebinding></app-stylebinding>
