style binding and angular ui

--- a/src/app/stylebinding/stylebinding.component.html
+++ b/src/app/stylebinding/stylebinding.component.html
@@ -5,3 +5,7 @@
 <button (click)="buttonClick()">change color by button</button>
 
 <h1 [style.color]="err?'red':'green'">condition Color</h1>
+
+<h1>Angular material</h1>
+<button mat-raised-button color="accent">Accent</button>
+<button mat-raised-button color="warn">Warn</button>
