--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,5 +9,7 @@
     <h1>Header and Footer</h1>
     <app-footer></app-footer>
 </div> -->
-<app-stylebinding></app-stylebinding>
-
+<!-- <app-stylebinding></app-stylebinding> -->
+<div class="parentChild">
+    <app-parent></app-parent>
+</div>
