--- a/src/app/child/child.component.html
+++ b/src/app/child/child.component.html
@@ -1,1 +1,8 @@
 <p>catch transferred value = {{hero}} inside the child component</p>
+<hr>
+<h1>re-useable component example</h1>
+<div *ngFor="let user of usersData">
+    <p>Name = {{user.name}}</p>
+    <p>Age = {{user.age}}</p>
+    <p>Address = {{user.address}}</p>
+</div>
