record count base on date

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-interpolation></app-interpolation> -->
+<app-interpolation></app-interpolation>
 <!-- <app-componet></app-componet> -->
 <!-- <app-logincomponent></app-logincomponent> -->
 <!-- <app-event></app-event> -->
@@ -10,6 +10,6 @@
     <app-footer></app-footer>
 </div> -->
 <!-- <app-stylebinding></app-stylebinding> -->
-<div class="parentChild">
+<!-- <div class="parentChild">
     <app-parent></app-parent>
-</div>
+</div> -->
