--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,21 @@
-<app-interpolation></app-interpolation>
+<!-- <app-interpolation></app-interpolation> -->
 <!-- <app-componet></app-componet> -->
 <!-- <app-logincomponent></app-logincomponent> -->
 <!-- <app-event></app-event> -->
 <!-- <app-propbinding></app-propbinding> -->
 <!-- <app-condition></app-condition> -->
+
 <!-- <div style="text-align: center  ;">
     <app-header></app-header>
     <h1>Header and Footer</h1>
     <app-footer></app-footer>
 </div> -->
+
 <!-- <app-stylebinding></app-stylebinding> -->
+
 <!-- <div class="parentChild">
     <app-parent></app-parent>
 </div> -->
+
+<!-- <app-register-user></app-register-user> -->
+<app-host-listener></app-host-listener>
