--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <app-interpolation></app-interpolation> -->
+<app-interpolation></app-interpolation>
 <!-- <app-componet></app-componet> -->
 <!-- <app-logincomponent></app-logincomponent> -->
 <!-- <app-event></app-event> -->
@@ -18,4 +18,4 @@
 </div> -->
 
 <!-- <app-register-user></app-register-user> -->
-<app-host-listener></app-host-listener>
+<!-- <app-host-listener></app-host-listener> -->
