--- a/src/app/interpolation/interpolation.component.html
+++ b/src/app/interpolation/interpolation.component.html
@@ -27,3 +27,6 @@ Below Tenary Example
 
 Get Full name 
 <h3>{{getFullName()}}</h3>
+
+<input #usernameInput placeholder="Enter username">
+<button (click)="checkUsername(usernameInput.value)">Check Username</button>
